tests/unit/default/syntax-error/041-create-table-parens-name-colon-type-params-null-eq-false.e.t
---- IN ----
+%table(id:decimal(10,2)?=false
---- OUT ----
---- ERR ----
syntax: expected `)` after `...decimal(10,2)?=false` instead of EOL at position 31 - at line 1
---- EXIT ----
1
